core/src/components/input/input.scss
/* ... */
:host-context(ion-item)[slot="start"],
:host-context(ion-item)[slot="end"] {
  width: auto;
}

:host(.ion-color) {
  --highlight-color-focused: #{current-color(base)};
}

// Input Wrapper
// ----------------------------------------------------------------

/**
 * Since the label sits on top of the element,
 * the component needs to be taller otherwise the
 * label will appear too close to the input text.
 */
:host(.input-label-placement-floating),
:host(.input-label-placement-stacked) {
  min-height: 56px;
}

// Native Text Input
// --------------------------------------------------

.native-input {
  @include padding(0, 0, 0, 0);
  @include text-inherit();

  display: inline-block;

  position: relative;

  flex: 1;

  width: 100%;
  max-width: 100%;

  // Ensure the input fills the full height of the native wrapper.
  // This prevents the wrapper from being the click event target.
  height: 100%;
  max-height: 100%;

  border: 0;

  outline: none;

  background: transparent;

  box-sizing: border-box;
  appearance: none;

  /**
   * This ensures the input
   * remains on top of any decoration
   * that we render (particularly the
   * outline border when fill="outline").
   * If we did not do this then Axe would
   * be unable to determine the color
   * contrast of the input.
   */
  z-index: 1;

  &::placeholder {
    color: var(--placeholder-color);

    font-family: inherit;
    font-style: var(--placeholder-font-style);
    font-weight: var(--placeholder-font-weight);

    opacity: var(--placeholder-opacity);
  }

  &:-webkit-autofill {
    background-color: transparent;
  }

  &:invalid {
    box-shadow: none;
  }

  &::-ms-clear {
    display: none;
  }
}

// Input Cover: Unfocused
// --------------------------------------------------
// The input cover is the div that actually receives the
// tap/click event when scroll assist is configured to true.
// This make it so the native input element is not clickable.
// This will only show when the scroll assist is configured
// otherwise the .input-cover will not be rendered at all
// The input cover is not clickable when the input is disabled
.cloned-input {
  @include position(0, null, 0, 0);

  position: absolute;

  pointer-events: none;
}

/**
 * The cloned input needs to be disabled on
 * Android otherwise the viewport will still
 * shift when running scroll assist.
 */
.cloned-input:disabled {
  opacity: 1;
}

// Clear Input Icon
// --------------------------------------------------

.input-clear-icon {
  @include margin(auto);
  @include padding(0);
  @include background-position(center);

  display: flex;

  align-items: center;
  justify-content: center;

  width: 30px;
  height: 30px;

  border: 0;

  outline: none;

  background-color: transparent;
  background-repeat: no-repeat;

  color: $text-color-step-400;

  visibility: hidden;
  appearance: none;
}

:host(.in-item-color) .input-clear-icon {
  color: inherit;
}

/**
 * Normally, we would not want to use :focus
 * here because that would mean tapping the button
 * on mobile would focus it (and keep it focused).
 * However, the clear button always disappears after
 * being activated, so we never get to that state.
 */
.input-clear-icon:focus {
  opacity: 0.5;
}

:host(.has-value) .input-clear-icon {
  visibility: visible;
}

// Input Wrapper
// ----------------------------------------------------------------

.input-wrapper {
  @include padding(var(--padding-top), var(--padding-end), var(--padding-bottom), var(--padding-start));
  @include border-radius(var(--border-radius));

  display: flex;

  position: relative;

  flex-grow: 1;

  align-items: stretch;

  height: inherit;

  min-height: inherit;

  transition: background-color 15ms linear;

  background: var(--background);

  line-height: normal;
}

// Input Native Wrapper
// ----------------------------------------------------------------

.native-wrapper {
  display: flex;

  position: relative;

  flex-grow: 1;

  // ensure start/end slot content is vertically centered
  align-items: center;

  width: 100%;
}

// Input Highlight
// ----------------------------------------------------------------

:host(.ion-touched.ion-invalid) {
  --highlight-color: var(--highlight-color-invalid);
}

/**
 * The component highlight is only shown
 * on focus, so we can safely set the valid
 * color state when valid. If we
 * set it when .has-focus is present then
 * the highlight color would change
 * from the valid color to the component's
 * color during the transition after the
 * component loses focus.
 */
:host(.ion-valid) {
  --highlight-color: var(--highlight-color-valid);
}

// Input Bottom Content
// ----------------------------------------------------------------

.input-bottom {
  /**
   * The bottom content should take on the start and end
   * padding so it is always aligned with either the label
   * or the start of the text input.
   */
  @include padding(5px, var(--padding-end), 0, var(--padding-start));

  display: flex;

  justify-content: space-between;

  border-top: var(--border-width) var(--border-style) var(--border-color);

  font-size: dynamic-font(12px);

  white-space: normal;
}

/**
 * If the input has a validity state, the
 * border and label should reflect that as a color.
 * The invalid state should show if the input is
 * invalid and has already been touched.
 * The valid state should show if the input
 * is valid, has already been touched, and
 * is currently focused. Do not show the valid
 * highlight when the input is blurred.
 */
:host(.has-focus.ion-valid),
:host(.ion-touched.ion-invalid) {
  --border-color: var(--highlight-color);
}

// Input Hint Text
// ----------------------------------------------------------------

/**
 * Error text should only be shown when .ion-invalid is
 * present on the input. Otherwise the helper text should
 * be shown.
 */
.input-bottom .error-text {
  display: none;

  color: var(--highlight-color-invalid);
}
/* ... */

